--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "WebGL Demo",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/Fabiantjoeaon/event-horizon#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -31,6 +33,14 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-glsl-loader": "^1.0.1"
+  },
+  "dependencies": {
+    "gsap": "^1.20.2",
+    "lodash": "^4.17.4",
+    "path": "^0.12.7",
+    "three": "^0.86.0",
+    "whs": "^2.0.0"
   }
 }
